--- a/css/style.css
+++ b/css/style.css
@@ -171,8 +171,8 @@ figure {
 }
 
 .fh5co-cover {
-  background-size: auto;
-  position: absolute;
+  background-size: cover;
+  position: relative;
 }
 
 @media screen and (max-width: 768px) {
