--- a/css/style.css
+++ b/css/style.css
@@ -616,7 +616,7 @@ figure {
 #fh5co-countdown .countdown span {
   margin: 0 30px;
   display: inline-block;
-  font-family: "Montez", cursive;
+  font-family: "Dancing Script", cursive;
 }
 
 #fh5co-countdown .countdown small {
