--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,15 @@
   font-style: normal;
 }
 
+@font-face {
+    font-family: 'laylantiaregular';
+    src: url('laylantia-webfont.woff2') format('woff2'),
+         url('laylantia-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 /* =======================================================
 *
 * 	Template Style 
@@ -47,7 +56,8 @@ p, ul, ol {
 
 h1, h2, h3, h4, h5, h6 {
   color: #5a5a5a;
-  font-family: "Montez", cursive;
+ /* font-family: "Montez", cursive; */
+  font-family: "laylantiaregular", cursive;
   font-weight: 400;
   margin: 0 0 30px 0;
 }
