--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #5a5a5a;
  /* font-family: "Montez", cursive; */
  /* font-family: "laylantiaregular", cursive; */
-  font-family: 'Dancing Script', cursive;
+  font-family: "Dancing Script", "Montez", cursive;
   font-weight: 400;
   margin: 0 0 30px 0;
 }
